bynkc/tests/fixtures/negative/326_do_in_pure_context/input.bynk
commons demo.dopure

fn unit() -> Effect[()] {
  Effect.pure(())
}

fn bad() -> Int {
  do unit()
  5
}
